# SDL2-C_ProjectTemplate

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  release.yml
src/: main.c
